test/language/errors/errors_arithmetic.hm
# multiply error: expected numbers but found a boolean and integer
# multiply error: expected numbers but found an integer and boolean
# divide error: expected numbers but found a boolean and integer
# divide error: expected numbers but found an integer and boolean
# subtract error: expected numbers but found a boolean and integer
# subtract error: expected numbers but found an integer and boolean
# modulo error: expected integers but found a boolean and integer
# modulo error: expected integers but found an integer and boolean
# error: a boolean and integer can't be added
# error: an integer and boolean can't be added

use "errors"

try { false * 2 } except e { echo runtime(e) }
try { 2 * false } except e { echo runtime(e) }

try { false / 2 } except e { echo runtime(e) }
try { 2 / false } except e { echo runtime(e) }

try { false - 2 } except e { echo runtime(e) }
try { 2 - false } except e { echo runtime(e) }

try { false % 2 } except e { echo runtime(e) }
try { 2 % false } except e { echo runtime(e) }

try { false + 2 } except e { echo runtime(e) }
try { 2 + false } except e { echo runtime(e) }
